--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "mcp>=1.0.0",
     "google-generativeai>=0.8.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [build-system]
