--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,5 @@ dependencies = [
     "python-dotenv>=1.0.0",
 ]
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [tool.uv]
-dev-dependencies = []
+package = false
