T-032: use generate-sessions script in workflow

--- a/.github/workflows/devlog.yml
+++ b/.github/workflows/devlog.yml
@@ -25,101 +25,7 @@ jobs:
           python-version: '3.12'
 
       - name: Generate sessions.json
-        run: |
-          python3 -c "
-import subprocess, json, sys
-from pathlib import Path
-from datetime import datetime, timedelta
-from collections import Counter
-
-GAP_HOURS = 3
-CATEGORIES = {
-    'shader':   {'pattern': ['shaders/', '.glsl'],      'color': '#1a237e'},
-    'document': {'pattern': ['docs/', '.md'],           'color': '#f59e0b'},
-    'config':   {'pattern': ['config.', '.json'],       'color': '#94a3b8'},
-    'code':     {'pattern': ['src/', '.js'],            'color': '#22c55e'},
-    'asset':    {'pattern': ['assets/', '.svg', '.png'],'color': '#a855f7'},
-    'infra':    {'pattern': ['scripts/', '.github/', '.yml'], 'color': '#ef4444'},
-}
-
-def classify(filepath):
-    for cat, d in CATEGORIES.items():
-        for p in d['pattern']:
-            if p in filepath:
-                return cat
-    return 'code'
-
-result = subprocess.run(['git', 'log', '--format=%H|%aI|%s|%an', '--reverse'], capture_output=True, text=True)
-commits = []
-for line in result.stdout.strip().split('\n'):
-    if not line: continue
-    parts = line.split('|', 3)
-    if len(parts) < 4: continue
-    commits.append({'hash': parts[0], 'datetime': parts[1], 'message': parts[2], 'author': parts[3], 'files': [], 'insertions': 0, 'deletions': 0})
-
-result2 = subprocess.run(['git', 'log', '--format=%H', '--numstat', '--reverse'], capture_output=True, text=True)
-current_hash = None
-file_stats = {}
-for line in result2.stdout.strip().split('\n'):
-    line = line.strip()
-    if not line: continue
-    if len(line) == 40 and all(c in '0123456789abcdef' for c in line):
-        current_hash = line
-        file_stats[current_hash] = []
-    elif current_hash and '\t' in line:
-        parts = line.split('\t')
-        if len(parts) == 3:
-            ins = int(parts[0]) if parts[0] != '-' else 0
-            dels = int(parts[1]) if parts[1] != '-' else 0
-            file_stats[current_hash].append((ins, dels, parts[2]))
-
-for c in commits:
-    stats = file_stats.get(c['hash'], [])
-    c['files'] = [s[2] for s in stats]
-    c['insertions'] = sum(s[0] for s in stats)
-    c['deletions'] = sum(s[1] for s in stats)
-
-sessions_raw = []
-if commits:
-    current = [commits[0]]
-    gap = timedelta(hours=GAP_HOURS)
-    for i in range(1, len(commits)):
-        prev = datetime.fromisoformat(commits[i-1]['datetime'])
-        curr = datetime.fromisoformat(commits[i]['datetime'])
-        if curr - prev > gap:
-            sessions_raw.append(current)
-            current = [commits[i]]
-        else:
-            current.append(commits[i])
-    sessions_raw.append(current)
-
-result_json = []
-for idx, sc in enumerate(sessions_raw):
-    t0 = datetime.fromisoformat(sc[0]['datetime'])
-    t1 = datetime.fromisoformat(sc[-1]['datetime'])
-    dur = max(1, int((t1 - t0).total_seconds() / 60))
-    all_files = sorted(set(f for c in sc for f in c.get('files', [])))
-    total_ins = sum(c.get('insertions', 0) for c in sc)
-    total_dels = sum(c.get('deletions', 0) for c in sc)
-    msgs = [c['message'] for c in sc]
-    cats = [classify(f) for f in all_files]
-    dom = Counter(cats).most_common(1)[0][0] if cats else 'code'
-    n = len(sc)
-    intensity = round(min(1.0, n/30)*0.5 + min(1.0, (total_ins+total_dels)/500)*0.3 + min(1.0, len(all_files)/15)*0.2, 3)
-    result_json.append({
-        'id': f'ks{idx+1:03d}', 'repo': 'kesson-space',
-        'start': sc[0]['datetime'], 'end': sc[-1]['datetime'],
-        'duration_min': dur, 'commit_count': n,
-        'files_changed': all_files, 'insertions': total_ins, 'deletions': total_dels,
-        'dominant_category': dom, 'color': CATEGORIES.get(dom, {}).get('color', '#94a3b8'),
-        'messages': msgs, 'intensity': intensity, 'texture_url': None
-    })
-
-result_json.reverse()
-Path('assets/devlog').mkdir(parents=True, exist_ok=True)
-Path('assets/devlog/sessions.json').write_text(json.dumps(result_json, indent=2, ensure_ascii=False))
-print(f'{len(result_json)} sessions generated')
-"
+        run: python3 scripts/generate-sessions.py
 
       - name: Check for changes
         id: diff
