--- a/.github/workflows/devlog.yml
+++ b/.github/workflows/devlog.yml
@@ -1,11 +1,11 @@
-name: Devlog Gallery — Update sessions.json
+# DISABLED: sessions.json の自動上書きが本番データを破壊するため無効化
+# 手動実行のみ許可（workflow_dispatch）
+# 将来的に安全な形で再設計する場合はこのファイルを編集
+
+name: Devlog Gallery — Update sessions.json (DISABLED)
 
 on:
-  push:
-    branches: [main]
-    paths-ignore:
-      - 'assets/devlog/sessions.json'
-  workflow_dispatch:
+  workflow_dispatch:  # 手動実行のみ
 
 permissions:
   contents: write
@@ -14,29 +14,8 @@ jobs:
   update-sessions:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout（full history）
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Generate sessions.json
-        run: python3 scripts/generate-sessions.py
-
-      - name: Check for changes
-        id: diff
+      - name: Notice
         run: |
-          git diff --quiet assets/devlog/sessions.json && echo "changed=false" >> $GITHUB_OUTPUT || echo "changed=true" >> $GITHUB_OUTPUT
-
-      - name: Commit & Push
-        if: steps.diff.outputs.changed == 'true'
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add assets/devlog/sessions.json
-          git commit -m "devlog: update sessions.json [skip ci]"
-          git push
+          echo "⚠️ このワークフローは現在無効化されています"
+          echo "sessions.json は手動で管理してください"
+          exit 1
