feat(#92): automate english devlog cover placeholders

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "kesson-space dev scripts",
   "scripts": {
     "deeplinks": "node scripts/print-deeplinks.mjs",
+    "devlog:covers:en": "node scripts/generate-devlog-en-covers.mjs",
     "devlog:validate": "node scripts/validate-devlog-i18n.mjs"
   },
   "devDependencies": {
