--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "deeplinks": "node scripts/print-deeplinks.mjs",
     "devlog:covers:en": "node scripts/generate-devlog-en-covers.mjs",
-    "devlog:validate": "node scripts/validate-devlog-i18n.mjs"
+    "devlog:validate": "node scripts/validate-devlog-i18n.mjs",
+    "test:devlog-nav": "node tests/devlog-navigation.test.js && node tests/offcanvas-deeplink.test.js"
   },
   "devDependencies": {
     "puppeteer": "^24.37.3"
