feat(workflow): add semi-auto articles EN start routine (#107)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "deeplinks": "node scripts/print-deeplinks.mjs",
     "devlog:covers:en": "node scripts/generate-devlog-en-covers.mjs",
     "devlog:validate": "node scripts/validate-devlog-i18n.mjs",
-    "test:devlog-nav": "node tests/devlog-navigation.test.js && node tests/offcanvas-deeplink.test.js"
+    "test:devlog-nav": "node tests/devlog-navigation.test.js && node tests/offcanvas-deeplink.test.js",
+    "articles:en:check": "node scripts/articles-en-semi-auto.mjs --mode check",
+    "articles:en:sync": "node scripts/articles-en-semi-auto.mjs --mode sync",
+    "articles:en:routine": "node scripts/articles-en-semi-auto.mjs --mode routine --notify-issue --issue 107 --repo uminomae/kesson-space"
   },
   "devDependencies": {
     "puppeteer": "^24.37.3"
